<resources>
    <string name="app_name">Dice</string>
    <string name="title">Dice Cup</string>
    <string name="roll">Roll</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="dice">Dice</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="description2">Description2</string>

</resources>
